check_output.txt
    Checking xvi v0.1.0 (/Users/af/workspace/xvi)
error[E0425]: cannot find value `app` in this scope
  --> src/ui/window.rs:26:33
   |
26 |             if let Ok(buffer) = app
   |                                 ^^^ not found in this scope

error[E0425]: cannot find value `dock_area` in this scope
  --> src/ui/window.rs:33:25
   |
33 |                         dock_area.update(cx, |dock_area, cx| {
   |                         ^^^^^^^^^
   |
help: you might have meant to use the available field
   |
33 |                         self.dock_area.update(cx, |dock_area, cx| {
   |                         +++++

warning: unused import: `App`
 --> src/ui/window.rs:4:18
  |
4 | use crate::app::{App, OpenFile};
  |                  ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `window_handle` found for mutable reference `&mut gpui::Context<'_, WindowRoot>` in the current scope
  --> src/ui/window.rs:23:32
   |
23 |         let window_handle = cx.window_handle();
   |                                ^^^^^^^^^^^^^
   |
help: there is a method `windows` with a similar name
   |
23 -         let window_handle = cx.window_handle();
23 +         let window_handle = cx.windows();
   |

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
warning: `xvi` (bin "xvi") generated 1 warning
error: could not compile `xvi` (bin "xvi") due to 3 previous errors; 1 warning emitted
